# coding-agent-sandbox

./: .gitignore  AGENTS.md  Cargo.toml  README.md  test_full.sh  test_fuse.sh
.sandbox/: config.toml
assets/: default_conf.toml  sandbox_gitignore
plan/: fuser-note.md  logging-principle.md  overview.md
plan/bugs/: 001-CoW.md  002-passthrough-backoff-reuse.md  003-cow-read-after-create-enoent.md  004-cow-sqlite-ordwr-empty-object.md  005-cow-short-write-corrupts-cargo-cache.md  005-opencode-unexpected-exit-pty.md
plan/modules/cli/: clean.md  init.md  purge.md  run.md
plan/modules/config/: config.md  policy.md
plan/modules/fuse/: attr.md  bin.md  decision.md  executor.md  fs.md  inode.md  mount.md  open_file.md  policy.md  readdir.md  state.md
plan/modules/isolate/: seccomp.md  stage1.md  stage2.md
plan/modules/log/: log.md
plan/modules/plugin/: opencode-cas-test.md  opencode-cas.md
plan/modules/shm/: mutex.md  region.md  state.md  test.md
plan/modules/syncing/: client.md  closure.md  disk.md  object.md  pool.md  proto.md  server.md
plan/test/: full.md  fuse.md
plugins/opencode-cas/: README.md  package.json
plugins/opencode-cas/plugin/: helpers.js  index.js
plugins/opencode-cas/test/unit/: helpers.test.js  index.test.js
src/: error.rs  log.rs  main.rs
src/cli/: clean.rs  init.rs  mod.rs  purge.rs  run.rs  sandbox.rs
src/config/: config.rs  mod.rs  policy.rs
src/fuse/: attr.rs  decision.rs  executor.rs  fs.rs  inner.rs  inode.rs  mod.rs  mount.rs  open_file.rs  policy.rs  state.rs  state_loader.rs
src/isolate/: mod.rs  seccomp.rs  stage1.rs  stage2.rs
src/shm/: mod.rs  mutex.rs  region.rs  state.rs
src/syncing/: client.rs  closure.rs  disk.rs  mod.rs  object.rs  pool.rs  proto.rs  server.rs
tests/: perf_sparse.rs  test_full.sh  test_fuse.sh
