[package]
name    = "cas"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = []

[dependencies]
serde       = { version = "1", features = ["derive"] }
postcard    = { version = "1", features = ["alloc", "use-std"] }
bytemuck    = { version = "1", features = ["derive"] }
toml        = "0.8"
clap        = { version = "4", features = ["derive"] }
fuser       = {version="0.17", features = [ "abi-7-40" ]}
tempfile    = "3"
globset     = "0.4"
nix         = { version = "0.29", features = ["user", "fs", "mount", "process", "signal", "sched", "mman", "pthread", "poll", "term"] }
libc        = "0.2"
libseccomp  = "0.4"
caps        = "0.5"
rand        = "0.8"
thiserror   = "2"
errno       = "0.3"
log         = "0.4"
env_logger  = "0.11"
chrono      = "0.4"
unix_socket = "0.5"
dashmap     = "6"
tokio       = { version = "1.50", features = ["full"] }

[dev-dependencies]
serial_test = "3.4.0"
